--- a/app/src/main/res/layout/activity_sliding_tab.xml
+++ b/app/src/main/res/layout/activity_sliding_tab.xml
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <com.flyco.tablayout.SlidingTabLayout
+            <com.aries.ui.view.tab.SlidingTabLayout
                 android:id="@+id/tl_1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -29,7 +29,7 @@
                 tl:tl_underline_gravity="TOP"
                 tl:tl_underline_height="1dp"/>
 
-            <com.flyco.tablayout.SlidingTabLayout
+            <com.aries.ui.view.tab.SlidingTabLayout
                 android:id="@+id/tl_2"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
@@ -43,36 +43,36 @@
                 tl:tl_tab_padding="22dp"
                 tl:tl_tab_space_equal="true"
                 tl:tl_textSelectColor="#000000"
-                tl:tl_textUnselectColor="#66000000"
+                tl:tl_textUnSelectColor="#66000000"
                 tl:tl_underline_color="#1A000000"
                 tl:tl_underline_height="1dp"/>
 
-            <com.flyco.tablayout.SlidingTabLayout
+            <com.aries.ui.view.tab.SlidingTabLayout
                 android:id="@+id/tl_3"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:background="#3F9FE0"
                 tl:tl_textAllCaps="true"
                 tl:tl_textBold="BOTH"
-                tl:tl_textsize="14sp"/>
+                tl:tl_textSize="14sp"/>
 
-            <com.flyco.tablayout.SlidingTabLayout
+            <com.aries.ui.view.tab.SlidingTabLayout
                 android:id="@+id/tl_4"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:background="#009688"
                 tl:tl_tab_padding="0dp"
                 tl:tl_tab_width="95dp"
-                tl:tl_textsize="15sp"/>
+                tl:tl_textSize="15sp"/>
 
-            <com.flyco.tablayout.SlidingTabLayout
+            <com.aries.ui.view.tab.SlidingTabLayout
                 android:id="@+id/tl_5"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:background="#F6CE59"
                 tl:tl_indicator_width="10dp"/>
 
-            <com.flyco.tablayout.SlidingTabLayout
+            <com.aries.ui.view.tab.SlidingTabLayout
                 android:id="@+id/tl_6"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
@@ -81,7 +81,7 @@
                 tl:tl_indicator_height="4dp"
                 tl:tl_indicator_width="4dp"/>
 
-            <com.flyco.tablayout.SlidingTabLayout
+            <com.aries.ui.view.tab.SlidingTabLayout
                 android:id="@+id/tl_7"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
@@ -90,7 +90,7 @@
                 tl:tl_indicator_height="3dp"
                 tl:tl_indicator_width="10dp"/>
 
-            <com.flyco.tablayout.SlidingTabLayout
+            <com.aries.ui.view.tab.SlidingTabLayout
                 android:id="@+id/tl_8"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
@@ -98,7 +98,7 @@
                 tl:tl_indicator_color="#eeeeee"
                 tl:tl_indicator_style="TRIANGLE"/>
 
-            <com.flyco.tablayout.SlidingTabLayout
+            <com.aries.ui.view.tab.SlidingTabLayout
                 android:id="@+id/tl_9"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
@@ -109,7 +109,7 @@
                 tl:tl_indicator_margin_right="2dp"
                 tl:tl_indicator_style="BLOCK"/>
 
-            <com.flyco.tablayout.SlidingTabLayout
+            <com.aries.ui.view.tab.SlidingTabLayout
                 android:id="@+id/tl_10"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
