--- a/app/src/main/res/layout/activity_sliding_tab.xml
+++ b/app/src/main/res/layout/activity_sliding_tab.xml
@@ -21,10 +21,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#666666"
-                android:paddingBottom="15dp"
                 android:paddingTop="15dp"
+                android:paddingBottom="15dp"
                 tl:tl_indicator_gravity="TOP"
                 tl:tl_textBold="SELECT"
+                tl:tl_textSelectSize="20dp"
                 tl:tl_underline_color="#1A000000"
                 tl:tl_underline_gravity="TOP"
                 tl:tl_underline_height="1dp"/>
@@ -123,7 +124,7 @@
 
         </LinearLayout>
 
-        <android.support.v4.view.ViewPager
+        <androidx.viewpager.widget.ViewPager
             android:id="@+id/vp"
             android:layout_width="match_parent"
             android:layout_height="84dp"/>
