1、修改部分float只为int 并增加相关set方法 2、优化FragmentManager commit方法用于解决刷新前Activity Tab Fragment未同步切换问题 3、优化监听逻辑

--- a/app/src/main/res/layout/activity_common_tab.xml
+++ b/app/src/main/res/layout/activity_common_tab.xml
@@ -128,5 +128,11 @@
             tl:tl_indicator_margin_right="5dp"
             tl:tl_indicator_style="BLOCK"
             tl:tl_textSize="14sp"/>
+
+        <Button
+            android:id="@+id/btn_eventTab"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="EventBus"/>
     </LinearLayout>
 </ScrollView>
