--- a/app/src/main/res/layout/activity_sliding_tab.xml
+++ b/app/src/main/res/layout/activity_sliding_tab.xml
@@ -124,6 +124,12 @@
 
         </LinearLayout>
 
+        <Button
+            android:id="@+id/btn_eventTab"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="EventBus"/>
+
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/vp"
             android:layout_width="match_parent"
